--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="funciones"/>
+	<classpathentry kind="src" path="funcionessobrecarga"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
