--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="funciones"/>
 	<classpathentry kind="src" path="funcionessobrecarga"/>
+	<classpathentry kind="src" path="funcionesyatributos"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
